src/styles/components/_rating.scss
@use '../abstracts/tokens' as *;

.rating {
  max-inline-size: 40ch;
  padding: $s2;

  &__options-container {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    gap: min(5vw, $s1);
    align-items: stretch;
  }

  &__option {
    padding: $s-3;
    aspect-ratio: 1;
    border-radius: 50%;
    display: grid;
    place-items: center;
    background-color: $dark-blue;
    color: $medium-grey;
    font-weight: 700;
    cursor: pointer;
    transition: all 0.1s linear;

    &:hover {
      background-color: $medium-grey;
      color: $pure-white;
    }
  }

  input[type='radio'] {
    &:focus + label {
      background-color: $medium-grey;
      color: $pure-white;
    }

    &:checked + label {
      background-color: $orange;
      color: $pure-white;
    }
  }

  &[data-invalid] {
    animation-duration: 0.5s;
    animation-timing-function: cubic-bezier(0, 0.23, 1, 0.71);
    animation-name: head-shake;
    // transform-orgin: center bottom;
  }
}

